add a Status finder